--- a/ES6 Learn/class/js-tips/index.html
+++ b/ES6 Learn/class/js-tips/index.html
@@ -10,6 +10,7 @@
       
     </div>
     
-    <script src="src/index.js"></script>
+    <!-- <script src="src/index.js"></script> -->
+    <script src="src/extends.js"></script>
   </body>
 </html>
